<resources>
    <string name="app_name">LastMile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dashboard">Dashboard</string>
    <string name="profile">Profile</string>


    //SignIn
    <string name="signin">Sign In</string>
    <string name="signin_sub">Tell us about yourself!</string>
    <string name="signup_sub">Lets get you started!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>

    //Welcome Screen
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome to LastMile!</string>
    <string name="welcome_det">How would you like to get started?</string>

    //OrderDescription
    <string name="description">Description : </string>
    <string name="start_place">Pick Up : </string>
    <string name="end_place">Deliver :</string>

    //PlaceOrder
    <string name="order_title">Order Title</string>
    <string name="order_desc">Order Description</string>
    <string name="order_pick_up">Pick Up</string>
    <string name="order_drop">Drop</string>
    <string name="place_order">Place Order</string>
    <string name="order">Order</string>

    //Profile
    <string name="about_us">About Last Mile</string>
    //Package Item
    <string name="status">Status : </string>

    //DashBoard
    <string name="hey_there">Welcome</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="order_history">Order History</string>

    //MISC
    <string name="placeholder">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable sourceContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source</string>
</resources>